Fix broken assert when joining empty strings.

https://bugs.webkit.org/show_bug.cgi?id=291995

Reviewed by Yusuke Suzuki.

This assert fails when joining an array of empty strings with an empty
string. Detect this case and bail out early.

* Source/JavaScriptCore/runtime/JSStringJoiner.cpp:
(JSC::joinStrings): Remove assert and early exit.

Canonical link: https://commits.webkit.org/294298@main